# rhyme_trie

./: README.md  pyproject.toml  test.py
rhyme_trie/: __init__.py  __main__.py  trie.py
